--- a/written/eLifeRevision/Bittner_eLife2020.tex
+++ b/written/eLifeRevision/Bittner_eLife2020.tex
@@ -583,6 +583,7 @@ The EPI inferred distribution  (Fig. \ref{fig:SC}C) produces Pro and Anti task a
 This parameter distribution has intricate structure, that is not captured well by simple linear correlations (Fig. \ref{fig:SC1}).
 Specifically, the shape of the EPI distribution changes dramatically on different sides of parameter space.
 This is most saliently pointed out in the marginal distribution of  $sW$-$hW$ (Fig. \ref{fig:SC}C top-right), where anticorrelation between $sW$ and $hW$ switches to correlation with decreasing $sW$.
+The two regimes produce different types of responses in the Pro and Anti tasks (Fig. SC2).
 Not only has EPI captured this complicated distribution of connectivities producing rapid task switching, we can query the EPI distribution $q_{\bm{\theta}}(\mathbf{z} \mid \mathcal{X})$ to understand these two parametric regimes of SC connectivity.
 
 To distinguish these two regimes, we use the EPI distribution to identify two sets of modes.
@@ -599,7 +600,13 @@ When perturbing connectivity along the sensitivity dimension, Pro accuracy monot
 However, there is a stark difference between regimes in Anti accuracy. 
 Anti accuracy falls in either direction of $\mathbf{v}_1$ in regime 1, yet monotonically increases along with Pro accuracy in regime 2 (Fig. \ref{fig:SC}D, top-right).
 These distinct pathologies of rapid task switching are caused by distinct connectivity changes ($\mathbf{v}_1(\mathbf{z}^*(r=1))$ vs $\mathbf{v}_1(\mathbf{z}^*(r=2))$) and explain the sharp change in local structure of the EPI distribution.
-With further perturbation analyses along dimensions of connectivity having established effects on processing, we are able to distinguish these two regimes with mechanistic insights (Fig. \ref{fig:SC}D, middle, bottom) (Section \ref{methods_SC}).
+
+To further examine the two regimes, we can perturb $\mathbf{z}$ in the same way along dimensions that independently change the eigenvalues of the connectivity matrix (which has constant eigenvectors with respect to $\mathbf{z}$).  These eigenvalues $\lambda_{\text{all}}$, $\lambda_{\text{side}}$, $\lambda_{\text{task}}$, and $\lambda_{\text{diag}}$ correspond to connectivity eigenmodes with intuitive roles in processing in this task (Fig. \ref{fig:SC3}A).
+For example, greater $\lambda_{\text{task}}$ will strengthen internal representations of task, while greater $\lambda_{\text{diag}}$ will amplify dominance of Pro and Anti pairs in opposite hemispheres (Section \ref{methods_SC}).
+Perturbation analyses reveal that decreasing $\lambda_{\text{task}}$ has close to the same effect on Anti accuracy as perturbations along the sensitivtity dimension (Fig. \ref{fig:SC}D, middle).
+This suggests that there is a carefully tuned strength of task representation in regime 1, which if disturbed results in random Anti trial responses.
+Finally, we recognize that increasing $\lambda_{\text{diag}}$ has opposite effects on Anti accuracy in each regime (Fig. \ref{fig:SC}D, bottom).
+In the next section, we relate these mechanistic characterizations of each regime to how connectivity executes each task in the presence of optogenetic silencing.
 
 \subsection{EPI inferred SC connectivities reproduce results from optogenetic inactivation experiments} \label{results_SC_opt}
 
@@ -621,7 +628,7 @@ This context further distinguishes the two regimes discovered with EPI.
 
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.8]{figures/fig5/fig5.pdf}
+\includegraphics[scale=1.]{figures/fig5/fig5.pdf}
 \end{center}
 \caption{\footnotesize 
 \textbf{A}. The EPI distribution predicts experimental results (left) showing no change in the Pro task, but larger error in the Anti task (right).
@@ -1324,7 +1331,7 @@ To differentiate through the $\text{real}(\lambda_1)$, we solved the following e
 \end{equation}
 
 For EPI in Fig. \ref{fig:LRRNN}, we used a real NVP architecture with three coupling layers of affine transformations parameterized by two-layer neural networks of 100 units per layer.
-The initial distribution was a standard isotropic gaussian $z_0 \sim \mathcal{N}(\mathbf{0}, I)$ mapped to the support of $\mathbf{z}_i \in [-1, 1]$. 
+The initial distribution was a standard isotropic gaussian $\mathbf{z}_0 \sim \mathcal{N}(\mathbf{0}, I)$ mapped to the support of $\mathbf{z}_i \in [-1, 1]$. 
 We used an augmented Lagrangian coefficient of $c_0 = 10^{3}$, a batch size $n=200$, $\beta=4$, and chose to use $500$ iterations per augmented Lagrangian epoch and emergent property constraint convergence was evaluated at $N_{\text{test}} = 200$ (Fig. \ref{fig:LRRNN}B blue line, and Fig. \ref{fig:LRRNN}C-D blue).
 
 We compared EPI to two alternative simulation-based inference techniques, since the likelihood of these eigenvalues given $\mathbf{z}$ is not available.
@@ -1523,7 +1530,7 @@ s_E(\mathbf{x}; \mathbf{z}) =\mathbb{E}_{x}\left[\sqrt{\mathbb{E}_{t > t_{ss}}\l
 For EPI in Fig \ref{fig:V1}D-E, we used a real NVP architecture with three Real NVP coupling layers and two-layer neural networks of 50 units per layer.
 The normalizing flow architecture mapped $z_0 \sim \mathcal{N}(\mathbf{0}, I)$ to a support of $\mathbf{z} = [\sigma_E, \sigma_P, \sigma_S, \sigma_V] \in [0.0, 0.5]^4$.
 EPI optimization was run using three different random seeds for architecture initialization $\bm{\theta}$ with an augmented Lagrangian coefficient of $c_0 = 10^{-1}$, a batch size $n=100$, and $\beta = 2$.
-The distributions shown are those of the architectures converging with criteria $N_{\text{test}} = 100$ at greatest entropy across random seeds.
+The distributions shown are those of the architectures converging with criteria $N_{\text{test}} = 100$ at greatest entropy across three random seeds.
 
 In Fig. \ref{fig:V1}E, we visualize the modes of $q_{\bm{\theta}}(\mathbf{z} \mid \mathcal{X})$ throughout the $\sigma_E$-$\sigma_P$ marginal.
 Specifically, we calculated
@@ -1584,11 +1591,11 @@ These hyperparameter values are motivated by modeling choices and results from \
 
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.7]{figures/figSC2/figSC2.pdf}
+\includegraphics[scale=1.]{figures/figSC2/figSC2.pdf}
 \end{center}
 \caption{\small (SC2):  
-\textbf{A}. Simulations in network regime 1 ($hW_{\text{fixed}} = -1.2$) (center) with simulations given connectivity perturbations in the negative direction of the sensitivity vector $\mathbf{v}_1$ (left) and positive direction (right).
-\textbf{B}. Same as A for network regime 2.
+\textbf{A}. Simulations in network regime 1 ($hW_{\text{fixed}} = -1.5$).
+\textbf{B}. Simulations in network regime 2 ($hW_{\text{fixed}} = -1.5$) .
 }
 \label{fig:SC2}
 \end{figure}
@@ -1638,7 +1645,7 @@ The input parameterization was fixed to $I_{\text{constant}} = 0.75$, $I_{\text{
 
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.9]{figures/figSC3/figSC3.pdf}
+\includegraphics[scale=1.1]{figures/figSC3/figSC3.pdf}
 \end{center}
 \caption{\small (SC3):  
 \textbf{A}. Invariant eigenvectors of connectivity matrix $W$.
@@ -1673,13 +1680,24 @@ where $\beta = 100$.
 
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.8]{figures/figSC5/figSC5.pdf}
+\includegraphics[scale=1.2]{figures/figSC5/figSC5.pdf}
 \end{center}
 \caption{\small (SC5): 
 \textbf{A}. Response of each parameter regime to optogenetic silencing during the delay period.
 \textbf{B}. Error induced by delay period inactivation with increasing optogenetic strength.  Means and standard deviations are calculated across the entire EPI distribution.
 }
 \label{fig:SC5}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[scale=1.2]{figures/figSC6/figSC6.pdf}
+\end{center}
+\caption{\small (SC6): 
+\textbf{A}. Response of each parameter regime to optogenetic silencing during the delay period.
+\textbf{B}. Error induced by delay period inactivation with increasing optogenetic strength.  Means and standard deviations are calculated across the entire EPI distribution.
+}
+\label{fig:SC6}
 \end{figure}
 
 Writing the EPI distribution as a maximum entropy distribution, $T(\mathbf{x}, \mathbf{z})$ is comprised of both these first and second moments of the accuracy in each task (as in Equations \ref{eq:moments} and \ref{eq:mu_opt})
@@ -1695,22 +1713,22 @@ The optimization converged after ten epochs (Fig. \ref{fig:SC6}).
 
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.5]{figures/figSC6/figSC6.pdf}
+\includegraphics[scale=0.5]{figures/figSC7/figSC7.pdf}
 \end{center}
-\caption{\small (SC6): 
+\caption{\small (SC7): 
 \textbf{A}. Entropy throughout optimization. 
 \textbf{B}. The emergent property statistic means and variances converge to their constraints at 20,000 iterations following the tenth augmented Lagrangian epoch.
 }
-\label{fig:SC6}
+\label{fig:SC7}
 \end{figure}
 
 For EPI in Fig. \ref{fig:SC}C, we used a real NVP architecture with three coupling layers of affine transformations parameterized by two-layer neural networks of 50 units per layer.
-The initial distribution was a standard isotropic gaussian $z_0 \sim \mathcal{N}(\mathbf{0}, I)$ mapped to a support of $\mathbf{z}_i \in [-5, 5]$. 
+The initial distribution was a standard isotropic gaussian $\mathbf{z}_0 \sim \mathcal{N}(\mathbf{0}, I)$ mapped to a support of $\mathbf{z}_i \in [-5, 5]$. 
 We used an augmented Lagrangian coefficient of $c_0 = 10^{2}$, a batch size $n=100$, and $\beta=2$.
-The distribution converged with criteria $N_{\text{test}} = 25$.
+The distribution was the greatest EPI distribution to converge across 5 random seeds with criteria $N_{\text{test}} = 25$.
 
 The EPI distribution of SC model connectivities producing rapid task switching has interesting structure.
-Throughout $q_{\bm{theta}}(\mathbf{z} \mid \mathcal{X})$, we see that the probability distribution is narrow in $hW$ (Fig. \ref{fig:SC}C).
+Throughout $q_{\bm{\theta}}(\mathbf{z} \mid \mathcal{X})$, we see that the probability distribution is narrow in $hW$ (Fig. \ref{fig:SC}C).
 This suggests that rapid task switching is sensitive to changes in $hW$, but this is only a single parameter.
 The local structure of the distribution varies across parameter space, and thus the nature in which parameter combinations affect rapid task switching.
 From visual inspection, we may hypothesize that there are two distinct regimes, most easily visualized in the $sW$-$hW$ marginal distribution: one where $sW$ and $hW$ are correlated for greater $sW$ and one where $sW$ and $hW$ are anticorrelated for lesser $sW$.
