rewrite of section 3.6

--- a/written/eLifeRevision/Bittner_eLife2020.tex
+++ b/written/eLifeRevision/Bittner_eLife2020.tex
@@ -606,42 +606,50 @@ For example, greater $\lambda_{\text{task}}$ will strengthen internal representa
 Perturbation analyses reveal that decreasing $\lambda_{\text{task}}$ has close to the same effect on Anti accuracy as perturbations along the sensitivtity dimension (Fig. \ref{fig:SC}D, middle).
 This suggests that there is a carefully tuned strength of task representation in regime 1, which if disturbed results in random Anti trial responses.
 Finally, we recognize that increasing $\lambda_{\text{diag}}$ has opposite effects on Anti accuracy in each regime (Fig. \ref{fig:SC}D, bottom).
-In the next section, we relate these mechanistic characterizations of each regime to how connectivity executes each task in the presence of optogenetic silencing.
+In the next section, we build on these mechanistic characterizations of each regime by examining their resilience to optogenetic silencing.
 
 \subsection{EPI inferred SC connectivities reproduce results from optogenetic inactivation experiments} \label{results_SC_opt}
 
 During the delay period of this task, the circuit must prepare to execute the correct task based on the cue input.
 Experimental results from Duan et al. found that optogenetic inactivation of SC during the delay period consistently decreased performance in the Anti task, but had no effect on the Pro task (Fig. \ref{fig:SC_opto}A).
-All network connectivities inferred by EPI exhibited this same effect, when network activities were silenced during the delay period (see Section \ref{methods_SC}).
-Notably, EPI inferred connectivities were only conditioned upon the emergent property of rapid task switching, not on Anti task failure during delay period silencing.
-
-Following delay period inactivation, there are strong similarities in the responses of Pro and Anti trials during the choice period (Fig. \ref{fig:SC5}A).
-We interpreted these similarities to suggest that delay period inactivation flips the internal representation of task in the model.
-Connectivity patterns inducing greater Pro task accuracy would antagonistically reduce accuracy in Anti trials subject to delay period inactivation in which this flip in task representation occurs.
-In fact, across connectivities in the EPI inferred distribution, there was strong anti-correlation between Pro task accuracy $p_P$ and Anti task accuracy during delay period silencing $p_{A, opto}$ (Fig. \ref{fig:SC_opto}B).
-
-We explored whether this antagonism between $p_P$ and $p_{A, opto}$ was present in each connectivity regime.
-As in the previous section, we tested perturbations in the dimension of sensitivity $\mathbf{v}_1(\mathbf{z})$ from regime 1 to regime 2.
-In both regimes, we recall that perturbations along $\mathbf{v}_1(\mathbf{z})$ yield increasing $p_P$.
-We found that only in regime 2, does $p_{A,\text{opto}}$ decrease as $p_P$ increases(Fig. \ref{fig:SC_opto}C).
-This context further distinguishes the two regimes discovered with EPI.
+This suggests that SC maintains a representation of task throughout the delay period, which is important for correct execution of the Anti task.
+Network connectivities inferred by EPI exhibited this same effect in simulation at high  optogenetic strength $\gamma \in [0, 1]$ (Fig. \ref{fig:SC_opto}B) (see Section \ref{methods_SC}).
+To emphasize, EPI inferred connectivities were only conditioned upon the emergent property of rapid task switching, not on Anti task failure during delay period silencing.
 
 \begin{figure}
 \begin{center}
 \includegraphics[scale=1.]{figures/fig5/fig5.pdf}
 \end{center}
 \caption{\footnotesize 
-\textbf{A}. The EPI distribution predicts experimental results (left) showing no change in the Pro task, but larger error in the Anti task (right).
-\textbf{B}. Accuracy in the Anti task during delay period optogenetic inactivation $p_{A,\text{opto}}$ is strongly anticorrelated with accuracy in the Pro task.
-\textbf{C}. Mean and standard error ($N_{\text{test}}$ = 25) of accuracy with respect to perturbation along the sensitivity dimension of each mode $\mathbf{z}^*$.
+\textbf{A}. Experimental effect of delay period silencing on Pro and Anti task accuracy in rats.
+\textbf{B}. Mean and standard error (bars) across EPI distribution of Pro and Anti error induced by delay period inactivation of varying optogenetic strength.
+\textbf{C}. (Left) Mean and standard error of Pro and Anti error from regime 1 to regime 2 at $\gamma = 0.675$.
+(Right) Correlations of connectivity eigenvalues with Anti error from regime 1 to regime 2 at $\gamma = 0.675$.
+\textbf{D}. (Left) Responses of the SC model to delay period inactivation at $\gamma = 0.85$.  (Right) Anti accuracy following delay period inactivation at $\gamma = 0.85$ versus accuracy in the Pro task across connectivities in the EPI distribution.
 }
 \label{fig:SC_opto}
 \end{figure}
 
-In summary, we used EPI to obtain the full distribution of connectivities that execute rapid task switching.
-This EPI distribution revealed two regimes of rapid task switching, which we characterized using the probabilistic toolkit afforded by EPI.
-We found that both of these parametric regimes identified by EPI reproduce results from optogenetic inactivation experiments: when activity is silenced during the delay period, only Anti accuracy suffers.
-We then identified connectivity mechanisms governing Anti accuracy during delay period silencing, and showed the parametric regime they describe.
+The mean increase in Anti error is closest to the experimentally measured value of 7\% at $\gamma = 0.675$ (Fig. \ref{fig:SC_opto}B, black dot).  
+At this level of optogenetic strength, only regime 1 exhibits an increase in Anti error with delay period silencing (Fig. \ref{fig:SC_opto}C, left).
+The connectivities in regime 2 are thus more resilient in the Anti task to delay period silencing than regime 1.
+In regime 1, greater $\lambda_{\text{task}}$ and $\lambda_{\text{diag}}$ decrease Anti error (Fig. \ref{fig:SC_opto}C, right).
+In other words, these anticorrelations show that stronger task representations and diagonal amplification make the SC model more resilient to delay period silencing in the Anti task.
+All correlations of connectivity eigenvalue with Anti error degrade in regime 2, where there is no effect of delay period silencing on Anti error (Fig. \ref{fig:SC_opto}C, right).
+
+At about $\gamma = 0.85$ (Fig. \ref{fig:SC_opto}B, gray dot), the Anti error saturates, while Pro error remains at zero
+Following delay period inactivation at this optogenetic strength, there are strong similarities in the responses of Pro and Anti trials during the choice period (Fig. \ref{fig:SC_opto}D, left).
+We interpreted these similarities to suggest that delay period inactivation at this saturated level flips the internal representation of task (from Anti to Pro) in the model.
+This would explain why the Anti error saturates at 50\%: the average Anti accuracy in EPI inferred connectivities is $75\%$, but is 25\% when the internal representation is flipped during delay period silencing.
+This hypothesis prescribes a model of Anti accuracy during delay period silencing of $p_{A,\text{opto}} = 100\% - p_P$, which is fit closely across both regimes of the EPI inferred connectivities (Fig. \ref{fig:SC_opto}D, right).
+Similarities between Pro and Anti trial responses were not present at the experiment-matching level of $\gamma=0.675$ (Fig. \ref{fig:SC6} left) and neither was anti-correlation in $p_P$ and $p_{A,\text{opto}}$ (Fig. \ref{fig:SC6} right).
+
+In summary, the connectivity inferred by EPI to perform rapid task switching replicated  results from optogenetic silencing experiments.
+We found that at levels of optogenetic strength matching experimental levels of Anti error, only one regime actually exhibited the effect.  
+This suggests that one regime is less resilient to optogenetic perturbation, and perhaps more biologically realistic.
+Finally, we mechanistically characterized the pathology in Anti error that occurs in both regimes when optogenetic strength is increased to high levels.
+This insight was made possible by using the probabilistic tools afforded by EPI: we identified two regimes and the continuum of connectivities between them, and we obtained many parameter samples at each step along the continuum (10 times faster than brute force methods, see Section \ref{methods_SC}).
+
 
 %To establish these two regimes of connectivity, we took gradient steps along $q_{\bm{\theta}}(\mathbf{z} \mid \mathcal{X})$ to produce modes $\mathbf{z}_1$ and $\mathbf{z}_2$  (Fig. \ref{fig:SC}C red and purple stars, Section \ref{methods_SC}).
 %Simulations from these two regimes reveal different responses in each task (Fig. \ref{fig:SC}D).
@@ -1683,8 +1691,8 @@ where $\beta = 100$.
 \includegraphics[scale=1.2]{figures/figSC5/figSC5.pdf}
 \end{center}
 \caption{\small (SC5): 
-\textbf{A}. Response of each parameter regime to optogenetic silencing during the delay period.
-\textbf{B}. Error induced by delay period inactivation with increasing optogenetic strength.  Means and standard deviations are calculated across the entire EPI distribution.
+(Left) Mean and standard error of Pro and Anti error from regime 1 to regime 2 at $\gamma = 0.85$.
+(Right) Correlations of connectivity eigenvalues with Anti error from regime 1 to regime 2 at $\gamma = 0.85$.
 }
 \label{fig:SC5}
 \end{figure}
@@ -1694,8 +1702,7 @@ where $\beta = 100$.
 \includegraphics[scale=1.2]{figures/figSC6/figSC6.pdf}
 \end{center}
 \caption{\small (SC6): 
-\textbf{A}. Response of each parameter regime to optogenetic silencing during the delay period.
-\textbf{B}. Error induced by delay period inactivation with increasing optogenetic strength.  Means and standard deviations are calculated across the entire EPI distribution.
+(Left) Responses of the SC model to delay period inactivation at $\gamma = 0.675$.  (Right) Anti accuracy following delay period inactivation at $\gamma = 0.675$ versus accuracy in the Pro task across connectivities in the EPI distribution.
 }
 \label{fig:SC6}
 \end{figure}
@@ -1740,6 +1747,11 @@ In regime 1, the initialization had positive $sW$, and the initialization had ne
 These modes were then used as the initialization to find the next mode at $hW_{\text{fixed}} = -1.4$ and so on.
 200 steps of gradient ascent were always taken, and learning rates of $2.5 \times 10^-4$ and $5 \times 10^-4$ were used for regimes 1 and 2, respectively.
 Each of these modes is denoted $\mathbf{z}^*(hW_{\text{fixed}}, r)$ for regime $r \in \{1, 2\}$.
+
+For the analyses in Figure \ref{fig:SC_opto}C and Figure \ref{fig:SC5}, we obtained parameters for each step along the continuum between regimes 1 and 2 by sampled from the EPI distribution.
+Each sample was assigned to the closest mode $\mathbf{z}^*(hW_{\text{fixed}}, r)$.
+Sampling continued until 500 samples were assigned to each mode, which took 7.36 seconds.
+To obtain this many samples for each mode with brute force sampling over the chosen prior, this would take 90 days.
 
 At each mode, we measure the sensitivity dimension (that of most negative eigenvalue in the Hessian of the EPI distribution) $\mathbf{v}_1(\mathbf{z}^*)$.
 To resolve sign degeneracy in eigenvectors, we chose $\mathbf{v}_1(\mathbf{z}^*)$ to have negative element in $hW$.
@@ -1797,7 +1809,7 @@ During periods of simulated optogenetic inactivation, activity was decreased pro
 \begin{equation}
 x_\alpha = (1-\gamma)\phi(u_\alpha).
 \end{equation}
-Delay period inactivation was from $0.8 < t < 1.2$, choice period inactivation was for $t > 1.2$ and total inactivation was for the entire trial.
+Delay period inactivation was from $0.8 < t < 1.2$.
 
 \end{document}
 
