--- a/written/eLifeRevision/Bittner_eLife2020.tex
+++ b/written/eLifeRevision/Bittner_eLife2020.tex
@@ -625,7 +625,7 @@ To emphasize, EPI inferred connectivities were only conditioned upon the emergen
 \textbf{B}. Mean and standard error (bars) across EPI distribution of Pro and Anti error induced by delay period inactivation of varying optogenetic strength.
 \textbf{C}. (Left) Mean and standard error of Pro and Anti error from regime 1 to regime 2 at $\gamma = 0.675$.
 (Right) Correlations of connectivity eigenvalues with Anti error from regime 1 to regime 2 at $\gamma = 0.675$.
-\textbf{D}. (Left) Responses of the SC model to delay period inactivation at $\gamma = 0.85$.  (Right) Anti accuracy following delay period inactivation at $\gamma = 0.85$ versus accuracy in the Pro task across connectivities in the EPI distribution.
+\textbf{D}. (Left) Responses of the SC model at the mode of the EPI distribution to delay period inactivation at $\gamma = 0.85$.  (Right) Anti accuracy following delay period inactivation at $\gamma = 0.85$ versus accuracy in the Pro task across connectivities in the EPI distribution.
 }
 \label{fig:SC_opto}
 \end{figure}
@@ -648,7 +648,7 @@ In summary, the connectivity inferred by EPI to perform rapid task switching rep
 We found that at levels of optogenetic strength matching experimental levels of Anti error, only one regime actually exhibited the effect.  
 This suggests that one regime is less resilient to optogenetic perturbation, and perhaps more biologically realistic.
 Finally, we mechanistically characterized the pathology in Anti error that occurs in both regimes when optogenetic strength is increased to high levels.
-This insight was made possible by using the probabilistic tools afforded by EPI: we identified two regimes and the continuum of connectivities between them, and we obtained many parameter samples at each step along the continuum (10 times faster than brute force methods, see Section \ref{methods_SC}).
+This insight was made possible by using the probabilistic tools afforded by EPI: we identified two regimes and the continuum of connectivities between them, and we obtained many parameter samples at each step along the continuum (X times faster than brute force methods, see Section \ref{methods_SC}).
 
 
 %To establish these two regimes of connectivity, we took gradient steps along $q_{\bm{\theta}}(\mathbf{z} \mid \mathcal{X})$ to produce modes $\mathbf{z}_1$ and $\mathbf{z}_2$  (Fig. \ref{fig:SC}C red and purple stars, Section \ref{methods_SC}).
@@ -1702,7 +1702,7 @@ where $\beta = 100$.
 \includegraphics[scale=1.2]{figures/figSC6/figSC6.pdf}
 \end{center}
 \caption{\small (SC6): 
-(Left) Responses of the SC model to delay period inactivation at $\gamma = 0.675$.  (Right) Anti accuracy following delay period inactivation at $\gamma = 0.675$ versus accuracy in the Pro task across connectivities in the EPI distribution.
+(Left) Responses of the SC model at the mode of the EPI distribution to delay period inactivation at $\gamma = 0.675$.  (Right) Anti accuracy following delay period inactivation at $\gamma = 0.675$ versus accuracy in the Pro task across connectivities in the EPI distribution.
 }
 \label{fig:SC6}
 \end{figure}
